--- a/button.css
+++ b/button.css
@@ -6,18 +6,21 @@
 
 .action-button
 {
-	position: relative;
-  padding-top: 10px;
+	position: absolute;
+  padding-top: 20px;
+	width: 50px;
+  height: 30px;
+  z-index: 999;
+	margin-top: 20px;
   /*
 
   
 	//border-radius: 10px;
   
-  
-  
   */
-  
-  
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+
   float: left;
 	font-size: 25px;
 	color: #FFF;
@@ -29,15 +32,17 @@
 	background-color: #82BF56;
 	border-bottom: 5px solid #669644;
 	text-shadow: 0px -2px #669644;
-  text-align: center;
-  width: 50px;
-  height: 25px;
-  margin-left: 600px;
-  
-  
-
-  
+  text-align: center;  
 }
+
+.red
+{
+	background-color: #E74C3C;
+	border-bottom: 5px solid #BD3E31;
+	text-shadow: 0px -2px #BD3E31;
+  text-align: center;  
+}
+
 
 
 .action-button:active
