--- a/styles/button.css
+++ b/styles/button.css
@@ -1,44 +1,39 @@
-.animate
-{
+.animate {
 	transition: all 0.1s;
 	-webkit-transition: all 0.1s;
 }
 
-.action-button
-{
+.action-button {
 	position: absolute;
-  padding-top: 10px;
+	padding-top: 10px;
 	width: 40px;
-  height: 20px;
-  z-index: 999;
+	height: 20px;
+	z-index: 999;
 	margin-top: 30px;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
-  float: left;
+	float: left;
 	font-size: 25px;
 	color: #FFF;
-	text-decoration: none;	
+	text-decoration: none;
 }
 
-.green
-{
+.green {
 	background-color: #82BF56;
 	border-bottom: 5px solid #669644;
 	text-shadow: 0px -2px #669644;
-  text-align: center;  
+	text-align: center;
 }
 
-.red
-{
+.red {
 	background-color: #E74C3C;
 	border-bottom: 5px solid #BD3E31;
 	text-shadow: 0px -2px #BD3E31;
-  text-align: center;  
+	text-align: center;
 }
 
-.action-button:active
-{
-	transform: translate(0px,5px);
-  -webkit-transform: translate(0px,5px);
+.action-button:active {
+	transform: translate(0px, 5px);
+	-webkit-transform: translate(0px, 5px);
 	border-bottom: 1px solid;
 }
